[package]
name = "tokio-rustls"
version = "0.1.0"
authors = ["Zeyu丶泽宇 <zhang@zeyu.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
tokio = { version = "0.3.0", features = ["full"] }
tokio-rustls = "0.20.0"
webpki = "0.21.3"
webpki-roots = "0.20.0"
